[tool.poetry]
name = "evolve_a_car"
version = "0.1.0"
description = "Evolve a car using genetic algorithms"
authors = ["Chandan Prasad M <prasadchandan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.6.1"
Box2D = "^2.3.10"
imgui = {extras = ["pyglet"], version = "^1.3.0"}
numpy = "^1.20.1"
pyglet = "^1.5.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
