[project]
name = "evolve_a_car"
version = "0.1.0"
description = "Evolve a car using genetic algorithms"
authors = [
    {name = "Chandan Prasad M", email = "prasadchandan@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.16.3",
    "box2d>=2.3.10",
    "imgui[pyglet]>=2.0.0",
    "numpy>=2.3.5",
    "pyglet>=2.1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
